css/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  /* with this we can adjust the size of the swiper navigation buttons */
  --swiper-navigation-size: 30px;
}

html {
  font-size: 62.5%;

  @media only screen and (max-width: 600px) {
    font-size: 50%;
  }
  font-family: "DM Sans", sans-serif;
}

.page-title {
  font-size: 3.6rem;
  font-weight: 700;
  margin: 3rem;
  text-align: center;
}

.container {
  position: relative;
  max-width: 120rem;
  margin: 2rem auto;
  display: flex;
  flex-direction: row;
  justify-content: space-around;

  @media only screen and (max-width: 600px) {
    margin: 1rem auto;
  }
}

.cover-left {
  @media only screen and (min-width: 750px) {
    position: absolute;
    top: 0;
    left: 0px;
    height: 100%;
    z-index: 5;
    background-image: linear-gradient(
      to right,
      #fff 0%,
      rgba(256, 256, 256, 0.4) 100%
    );
    width: 30%;
  }
  @media only screen and (min-width: 1200px) {
    width: 30%;
    left: 30px;
  }
}

.cover-right {
  @media only screen and (min-width: 750px) {
    position: absolute;
    top: 0;
    right: 0px;
    height: 100%;
    z-index: 5;
    background-image: linear-gradient(
      to left,
      #fff 0%,
      rgba(256, 256, 256, 0.4) 100%
    );
    width: 30%;
  }
  @media only screen and (min-width: 1200px) {
    width: 30%;
    right: 30px;
  }
}

.pricing-card {
  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 3rem 2rem;
  border: 1px solid #d5dfff;
  border-radius: 0.5rem;

  max-width: 36rem;

  color: #2f1c6a;
  transition: all 0.4s ease-in-out;
}

.pricing-card:hover {
  transform: scale(1.02);
  @media only screen and (max-width: 1000px) {
    transform: scale(1);
  }
  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
}

.product-badge {
  position: absolute;
  padding: 1rem 5rem;
  top: 0;
  transform: translateY(-50%);
  color: #fff;
  font-size: 1.8rem;
  font-weight: 700;
  border-radius: 50px;

  &::after {
    content: "";
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-top: 6px solid #fc5185;
    bottom: -6px;
    left: 50%;
    position: absolute;
    transform: translate(-50%);
  }
}

.pricing-card__title {
  font-size: 2.4rem;
  font-weight: 700;
  margin-bottom: 0.5rem;

  text-align: center;
}

.pricing-card__description {
  font-size: 1.4rem;
  font-weight: 100;
  margin-bottom: 2.4rem;
}

.pricing-card__discount {
  font-size: 1.4rem;

  & .original-price {
    text-decoration: line-through;
  }

  & .discount {
    font-weight: 700;
    padding: 0.5rem 1rem;
    border-radius: 1rem;
  }
}

.pricing-card__price {
  margin: 1.2rem 0 2.4rem;
  & .price__prefix,
  .price__suffix {
    font-size: 2rem;
    font-weight: 100;
  }

  & .price__current {
    font-size: 4.5rem;
    font-weight: 700;
  }
}

.pricing-card__offer {
  font-size: 1.8rem;
  font-weight: 700;
}

.pricing-card__renewal-price {
  font-size: 1.4rem;
  font-weight: 100;
  color: #727586;
  margin: 1.6rem 0 3.2rem;
}

.pricing-card__button {
  margin-top: 2rem;
  border: none;
  border-radius: 0.5rem;
  padding: 1.2rem 1.6rem;
  font-size: 1.6rem;

  min-height: 4.8rem;
  width: 100%;
  max-width: 24rem;

  font-size: 1.6rem;
  font-weight: 700;
  color: #fff;
}

.pricing-card__features {
  width: 100%;
  margin-bottom: 2.4rem;
}

.pricing-card__feature-title {
  font-size: 1.8rem;
  font-weight: 700;
  margin-bottom: 1.2rem;
}

.pricing-card__feature {
  font-size: 1.6rem;
  font-weight: 100;
  margin-bottom: 1.2rem;

  display: flex;
  justify-content: space-between;
}

.feature-content {
  margin-right: 1.5rem;
}
/* regarding tooltip */

.feature-tooltip {
  font-weight: 700;
  font-size: 1.8rem;
  display: inline-block;
  position: relative;
  text-align: left;
}

.feature-tooltip .bottom {
  min-width: 200px;
  top: 20px;
  right: 0;
  padding: 20px;
  color: #fff;
  background-color: #673de6;
  font-weight: normal;
  font-size: 13px;
  border-radius: 8px;
  position: absolute;
  z-index: 99999999;
  box-sizing: border-box;
  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
  display: none;
}

.feature-tooltip:hover .bottom {
  display: block;
}

/* regarding toggle button */
.toggle-content-btn {
  font-size: 1.6rem;
  font-weight: 700;
  cursor: pointer;
  & i {
    font-size: 1.8rem;
  }
}

/* basically the display of extra will be none, when clicked on the 
   button we will make it block */
input[type="checkbox"] {
  display: none;
}
.extra {
  width: 100%;
  display: none;
}

/* when the toggle button is clicked, we will make the extra block */
.toggle:checked {
  & ~ .extra {
    display: block;
  }

  & ~ label > .toggle-content-btn > .toggle-content-btn__text {
    visibility: hidden;
  }

  & ~ label > .toggle-content-btn > .toggle-content-btn__text:after {
    display: block;
    content: "See less features";
    visibility: visible;
  }
}

/* pagination related css */
.mySwiper {
  --add-top: 80px;
  padding: 80px 40px 50px 40px;
}

.swiper-slide {
  display: flex;
  justify-content: center;
}
.mySwiper .swiper-pagination-bullet {
  width: 12px;
  height: 12px;
}
.mySwiper [class^="swiper-button-"] {
  top: calc(50% + var(--add-top) / 2);
}
.mySwiper .swiper-pagination-bullets {
  bottom: initial;
  top: 5px;
}

.swiper-button-prev {
  left: 0px;
  right: auto;
  z-index: 999 !important;
}

.swiper-button-next {
  right: 0px;
  left: auto;
  z-index: 999 !important;
}
/* changes colours for components without changing the original component */
.bg-pink {
  background-color: #ffe8ef;
}

.bg-violet {
  background-color: #ebe4ff;
}

.bg-dark-pink {
  background-color: #fc5185;
}

.bg-dark-violet {
  background-color: #673de6;
}

.text-pink {
  color: #d63163;
}

.text-violet {
  color: #673de6;
}

.text-green {
  color: #00b090;
}

.text-yellow {
  color: #f5a623;
}
/* section separator */
.section-separater {
  border: 0.5px solid #d5dfff;
  margin-bottom: 32px;
  width: 100%;
}

